# physics_management_backend

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pom.xml  pyproject.toml
modules/: database.py
modules/auth/: dependencies.py  models.py  router.py
modules/board/: models.py  router.py
modules/engine/: models.py  router.py  routerArduino.py  routerGenerator.py  routerOscilloscope.py
src/main/java/com/itmo/physicsManagementBackend/: PhysicsManagementBackendApplication.java  ServletInitializer.java
src/main/java/com/itmo/physicsManagementBackend/configuration/: DevDatabase.java  TestDatabase.java
src/main/java/com/itmo/physicsManagementBackend/jpa/: LabWork.java  LabWorkEntry.java  LabWorkEntryRepository.java  LabWorkRepository.java
src/main/java/com/itmo/physicsManagementBackend/tasks/: linksUpdater.java
src/main/resources/: application.yml  schema.sql
src/test/java/com/itmo/physicsManagementBackend/: PhysicsManagementBackendApplicationTests.java
